// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`watcher 1`] = `
"// minibundle generate
const _$_exported = {};
const _$_modules = {
  \\"/foo.js\\": (_$_exports) => {
    _$_exports.default = \\"foo\\";
    return _$_exports;
  },
  \\"/bar.js\\": (_$_exports) => {
    _$_exports.default = \\"bar\\";
    return _$_exports;
  },
};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
// evaluate by order or sort?
_$_import(\\"/foo.js\\");
_$_import(\\"/bar.js\\");

// -- runner --
const { default: foo } = _$_import(\\"/foo.js\\");

const { default: bar } = _$_import(\\"/bar.js\\");

console.log(foo, bar);
"
`;

exports[`watcher 2`] = `
"// minibundle generate
const _$_exported = {};
const _$_modules = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
// evaluate by order or sort?
// -- runner --
console.log(1);
"
`;

exports[`watcher 2 1`] = `
"// minibundle generate
const _$_exported = {};
const _$_modules = {
  \\"/foo.js\\": (_$_exports) => {
    _$_exports.default = \\"foo\\";
    return _$_exports;
  },
  \\"/bar.js\\": (_$_exports) => {
    _$_exports.default = \\"bar\\";
    return _$_exports;
  },
};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
// evaluate by order or sort?
_$_import(\\"/foo.js\\");
_$_import(\\"/bar.js\\");

// -- runner --
const { default: foo } = _$_import(\\"/foo.js\\");

const { default: bar } = _$_import(\\"/bar.js\\");

console.log(foo, bar);
"
`;

exports[`watcher 2 2`] = `
"// minibundle generate
const _$_exported = {};
const _$_modules = {
  \\"/bar.js\\": (_$_exports) => {
    _$_exports.default = \\"bar\\";
    return _$_exports;
  },
};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
// evaluate by order or sort?
_$_import(\\"/bar.js\\");

// -- runner --
const { default: bar } = _$_import(\\"/bar.js\\");

console.log(bar);
"
`;
